testsuite/tests/properties/invalid_map/test.out
== arg_type.lkt ==
arg_type.lkt:6:30: error: NumberNode.entity expected
6 |         self.nb_list.map((x: Int) => x)
  |                              ^^^


== correct.lkt ==
Code generation was successful

== default_value.lkt ==
default_value.lkt:6:27: error: default values are not allowed here
6 |         self.nb_list.map((x=12) => x)
  |                           ^^^^


== too_many_args.lkt ==
too_many_args.lkt:6:27: error: at most 2 arguments expected
6 |         self.nb_list.map((x, y, z) => x)
  |                           ^^^^^^^


lkt_compile: Done
